feat: change boilerplate to newsscore
